--- a/app/src/main/res/layout/nav_header_splash.xml
+++ b/app/src/main/res/layout/nav_header_splash.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     >
     <LinearLayout
@@ -52,6 +52,14 @@
             android:id="@+id/common_channel">
 
         </GridView>
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="23dp"
+    android:id="@+id/main_draw_slip_test"
+    android:background="@color/background_Night"
+    android:textColor="@color/colorAccent"
+    android:gravity="center"
+    android:text="ssfdfdsffdsfsfsd"/>
 
 
 </LinearLayout>
